force-app/main/default/objects/DistribuicaoReceita__c/DistribuicaoReceita__c.object-meta.xml
<CustomObject>
    <description>Tabela de ligação para distribuir o valor de uma parcela entre múltiplas competências.</description>
    <label>Distribuição de Receita</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>ID Distribuição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribuições de Receita</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>