force-app/main/default/objects/DistribuicaoReceita__c/fields/OrcamentoCompetencia__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoCompetencia__c</fullName>
    <description>Competência que recebe o valor.</description>
    <label>Orçamento Competência</label>
    <referenceTo>OrcamentoCompetencia__c</referenceTo>
    <relationshipLabel>Distribuições de Receita</relationshipLabel>
    <relationshipName>DistribuicoesReceita</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>