force-app/main/default/objects/DistribuicaoReceita__c/fields/ParcelaFinanceira__c.field-meta.xml
<CustomField>
    <fullName>ParcelaFinanceira__c</fullName>
    <description>Parcela de onde vem o valor.</description>
    <label>Parcela Financeira</label>
    <referenceTo>ParcelaFinanceira__c</referenceTo>
    <relationshipLabel>Distribuições de Receita</relationshipLabel>
    <relationshipName>DistribuicoesReceita</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>