force-app/main/default/objects/DistribuicaoReceita__c/fields/ValorDistribuido__c.field-meta.xml
<CustomField>
    <fullName>ValorDistribuido__c</fullName>
    <description>Valor da parcela alocado para esta competência.</description>
    <label>Valor Distribuído</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>